# chaindash

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  run.sh  rustfmt.toml  sysinfo_disk_monitoring_research.md
.claude/specs/disk_monitoring/: design.md  requirements.md  tasks.md
.claude/specs/disk_monitoring_ui_optimization/: design.md  requirements.md  tasks.md
.claude/specs/multi_disk_monitoring/: design.md  requirements.md  tasks.md
.omc/: project-memory.json
.omc/plans/: code-quality-improvement-plan.md
.omc/sessions/: accaca77-7a0e-4b52-b671-4ecfd7520006.json
.omc/state/: agent-replay-accaca77-7a0e-4b52-b671-4ecfd7520006.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
src/: app.rs  draw.rs  error.rs  main.rs  notify.rs  opts.rs  sync.rs  update.rs
src/collect/: block_subscription.rs  collector.rs  daily_snapshot.rs  data.rs  docker_stats.rs  mod.rs  node_detail.rs  node_state.rs  system_stats.rs  types.rs
src/widgets/: block.rs  chart.rs  disk_list.rs  helpers.rs  mod.rs  node.rs  node_detail.rs  system.rs  system_summary.rs  time.rs  txs.rs
