[package]
name = "chaindash"
version = "0.1.0"
authors = ["mowind <wjinwen.1988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.2.0"
ctrlc = { version = "3.1.4", features = ["termination"]}
crossbeam-channel = "0.4.2"
web3 = { git = "https://github.com/mowind/rust-web3", branch= "platon" }
clap = "3.0.0-beta.1"
crossterm = "0.17"
num-rational = "0.2.4"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }