[package]
name = "chaindash"
version = "0.1.1"
authors = ["mowind <wjinwen.1988@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
better-panic = "0.2.0"
ctrlc = { version = "3.1.4", features = ["termination"] }
crossbeam-channel = "0.4.2"
web3 = { git = "https://github.com/mowind/rust-web3", branch = "platone-expiration" }
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.17"
num-rational = "0.2.4"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.6"
fern = "0.6"
log = "0.4"
chrono = "0.4"
hyper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
