[package]
name = "chaindash"
version = "0.1.1"
authors = ["mowind <wjinwen.1988@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
better-panic = "0.2.0"
ctrlc = { version = "3.1.4", features = ["termination"] }
crossbeam-channel = "0.5"
alloy = { git = "https://github.com/mowind/alloy", features = ["provider-ws", "pubsub", "provider-debug-api"] }
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.27"
num-rational = "0.4"
ratatui = "0.26"
tokio = { version = "1", features = ["full"] }
futures = "0.3.6"
fern = "0.6"
log = "0.4"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
thiserror = "1.0"

[dev-dependencies]

